# routes/index.js
@@ -6,5 +6,6 @@ const router = express.Router()
 
 router.post('/grade/pet', gradeController.postPetGrade);
 router.post('/grade/fce', gradeController.postFceGrade);
+router.post('/grade/cae', gradeController.postCaeGrade);
 
 module.exports = router
